<resources>
    <!--단체공유앨범-->
    <string name="group_album">단체공유앨범</string>
    <string name="group_album_with_space">단체 공유 앨범</string>
    <string name="empty_group_albums">단체공유앨범이 없습니다.</string>
    <string name="create_group_album">앨범 생성</string>
    <string name="photo_count">사진 %s장</string>

    <string name="toast_failed_to_create_group_album">단체공유앨범을 생성하는 데 실패했습니다.</string>
    <string name="toast_failed_to_read_group_album">단체공유앨범을 불러오는 데 실패했습니다.</string>
    <string name="toast_failed_to_exit_group_album">단체공유앨범에서 나가는 데 실패했습니다.</string>

    <string name="dialog_give_up_to_invite">초대 인원 선택을 그만둡니다.</string>
    <string name="dialog_exit_group_album">단체공유앨범에서 나갑니다.</string>

    <string name="give_up">그만두기</string>
    <string name="exit">나가기</string>
    <string name="tab_text_photo">사진</string>
    <string name="tab_text_pick">합성중</string>
    <string name="tab_text_complete">합성완료</string>

    <!--생성 플로우-->
    <string name="title_fragment_invite_friend">초대할 인원을\n선택해주세요</string>
    <string name="description_fragment_invite_friend">최대 %s명까지 초대할 수 있어요!</string>
    <string name="hint_search_bar">이름으로 검색하세요</string>
    <string name="suffix_count">/%s)</string>
    <string name="toast_exceed_selection">선택 인원을 초과했어요! 초대 인원은 최대 %d명까지입니다.</string>

    <string name="title_fragment_group_album_title">생성할 단체공유앨범의\n이름을 알려주세요</string>
    <string name="description_fragment_group_album_title">최대 %s글자까지 입력할 수 있어요.</string>
    <string name="hint_title">이름 입력</string>
    <string name="max_title_length">12</string>

    <string name="title_fragment_create_group_album">%s\n단체공유앨범이 생성되었어요!</string>
    <string name="description_fragment_create_group_album">이제, 친구와 모두의 PICK으로 사진을 공유해보세요.</string>

    <string name="empty_friends">아직 서비스를 이용하는 친구가 없어요 :(</string>
    <string name="empty_friends_with_keyword">해당하는 친구가 없어요 :(</string>

    <!--갤러리 내부-->
    <string name="empty_images_in_gallery">갤러리 내에 사진이 없어요 :(</string>
    <string name="save_in_gallery">갤러리에 저장하기</string>
    <string name="upload_photo">사진 올리기</string>
    <string name="update_group_album_title">단체공유앨범 이름 변경</string>
    <string name="member_count">단체인원(%s)</string>
    <string name="select_member_to_kick">내보낼 인원을 선택하세요.</string>
    <string name="do_invite">초대하기</string>

    <string name="toast_failed_to_invite">사용자를 초대하는 데 실패했습니다.</string>
    <string name="toast_failed_to_rename_group_album">단체공유앨범 이름 변경에 실패했습니다.</string>
    <string name="toast_failed_to_kick">사용자를 강퇴하는 데 실패했습니다.</string>
    <string name="dialog_kick_checked_member">선택한 멤버를 내보냅니다.</string>

    <!--사진-->
    <string name="empty_photos">사진이 없습니다 :(</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_story">IG story</string>
    <string name="facebook">Facebook</string>
    <string name="share_photo">사진 공유</string>

    <string name="toast_failed_to_read_photo">사진을 불러오는 데 실패했습니다.</string>
    <string name="toast_try_to_create_photo">사진을 업로드하는 중입니다. 잠시만 기다려주세요.</string>
    <string name="toast_failed_to_create_photo">사진을 업로드하는 데 실패했습니다.</string>
    <string name="toast_failed_to_delete_photo">사진을 삭제하는 데 실패했습니다.</string>
    <string name="toast_exceed_synthesis_max_photo_count">합성 사진 선택은 최대 %d장까지 가능합니다.</string>

    <string name="dialog_delete_photo">사진을 삭제합니다.</string>

    <!--합성 플로우-->
    <string name="dialog_synthetic">아래와 같은 사항을 지켜야 좋은 사진이 나올 수 있어요!\n\n 1. 모든 사진에 모든 멤버들이 포함되어야 해요.\n 2. 마스크를 끼거나 얼굴이 많이 가려진 경우 인식이 힘들어요.\n 3. 유사 구도의 사진들을 선택해주세요.</string>

    <!--친구-->
    <string name="invite_with_kakao">카톡으로 초대 메시지 보내기</string>
    <string name="kakao_message_text">모두가 마음에 들어하는 사진을 쉽고 빠르게, 인공지능 단체사진 합성 서비스 [모두의 PICK]에 초대합니다!</string>
    <string name="toast_kakao_talk_is_not_installed">카카오톡이 설치되어 있지 않습니다.</string>

    <!--사진 선택-->
    <string name="no_pick">선택안함</string>
    <string name="pick_best_photo">본인이 잘나온 사진을\n선택해주세요!</string>
    <string name="pick_me_prefix">Pick me! 마음에 드는 사진</string>
    <string name="pick_complete">선택완료</string>

    <!--타임아웃-->
    <string name="set_timeout">타임아웃을\n설정해주세요!</string>
    <string name="what_is_timeout">타임아웃이 무엇인가요?</string>
    <string name="hour">시간</string>
    <string name="min">분</string>
    <string name="toast_min_error">0~59분까지만 입력할 수 있어요!</string>
    <string name="toast_create_pick_success">사진선택 작업을 등록하는 데 성공했어요!</string>

    <string name="toast_failed_to_create_pick">사진 가이드에 맞춰서 사진을 다시 선택해주세요!</string>

    <!--합성중(사진작업)-->
    <string name="empty_picks">현재 합성중인 사진이 없습니다 :(</string>
    <string name="toast_failed_to_read_pick">사진 작업을 불러오는 데 실패했습니다.</string>
    <string name="uncompleted_pick_title">Pick Me!</string>
    <string name="uncompleted_pick_description">마음에 드는 사진을 선택해주세요!</string>
    <string name="completed_pick_title">친구의 Pick을 기다리는 중</string>
    <string name="completed_pick_description">진행현황을 확인해보세요!</string>

    <string name="pick_info_title">진행현황</string>
    <string name="pick_info_count_prefix">%d명 중 %d명이</string>
    <string name="pick_info_count_suffix">PICK 완료!</string>
    <string name="pick_info_timeout">%02d:%02d:%02d 남았습니다.</string>

    <string name="toast_failed_to_create_pick_info">사진 선택 정보를 등록하는 데 실패했습니다.</string>
    <string name="toast_failed_to_read_pick_info">사진 선택 정보를 불러오는 데 실패했습니다.</string>
    <string name="dialog_what_is_timeout">다른 멤버들은 타임아웃 내에 사진 선택을 마쳐야 합니다.\n타임아웃 이후에도 선택을 하지 않은 멤버가 있을 경우, 해당 멤버의 선택을 임의로 처리하고 합성을 진행합니다.</string>

    <!--합성완료-->
    <string name="empty_result_photos">합성완료 사진이 없습니다 :(</string>
    <string name="toast_failed_to_read_result_photo">합성완료 사진을 불러오는 데 실패했습니다.</string>
    <string name="toast_failed_to_delete_result_photo">합성완료 사진을 삭제하는 데 실패했습니다.</string>

    <string name="dialog_delete_result_photo">합성완료 사진을 삭제합니다.</string>

</resources>