<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.groupalbumlist.groupalbum.timeout.TimeoutFragment">

        <org.soma.everyonepick.common_ui.CustomActionBar
            android:id="@+id/customactionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hasBackButton="@{true}"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/title"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/margin_side"
            app:text="@{@string/set_timeout}"
            app:boldStart="@{0}"
            app:boldEnd="@{5}"
            app:layout_constraintTop_toBottomOf="@id/customactionbar"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/set_timeout"/>

        <ImageView
            android:id="@+id/image_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ico_help"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/margin_side"
            app:layout_constraintTop_toBottomOf="@id/text_title"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/what_is_timeout"
            android:textColor="@color/primary_blue"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="@id/image_help"
            app:layout_constraintBottom_toBottomOf="@id/image_help"
            app:layout_constraintStart_toEndOf="@id/image_help"/>

        <LinearLayout
            android:id="@+id/layout_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_help"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <EditText
                android:id="@+id/edittext_hour"
                style="@style/BigEditText"
                nextFocusEditText="@{@id/edittext_min1}"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour"
                android:textColor="@color/title"
                android:textSize="17sp"
                android:layout_marginStart="4dp"
                />
            <EditText
                android:id="@+id/edittext_min1"
                android:layout_marginStart="12dp"
                style="@style/BigEditText"
                nextFocusEditText="@{@id/edittext_min2}"
                />
            <EditText
                android:id="@+id/edittext_min2"
                style="@style/BigEditText"
                android:layout_marginStart="6dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:textColor="@color/title"
                android:textSize="17sp"
                android:layout_marginStart="4dp"
                />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/BottomButton"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>